--- a/server/src/views/chat.ejs
+++ b/server/src/views/chat.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
+      href="https://cdn.bootcdn.net/ajax/libs/font-awesome/5.12.1/css/all.min.css"
       integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk="
       crossorigin="anonymous"
     />
@@ -53,9 +53,9 @@
       </div>
     </div>
     <script src="https://cdn.bootcdn.net/ajax/libs/vue/2.6.12/vue.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.3/socket.io.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.10.1/qs.min.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/socket.io/3.1.3/socket.io.min.js"></script>
+    <!-- <script src="https://cdn.bootcdn.net/ajax/libs/qs/6.9.6/qs.min.js"></script> -->
+    <script src="https://cdn.bootcdn.net/ajax/libs/limonte-sweetalert2/10.15.6/sweetalert2.all.min.js"></script>
     <script>
       const socket = io();
       // const { username, chatroom } = Qs.parse(location.search, {
