--- a/server/src/views/home.ejs
+++ b/server/src/views/home.ejs
@@ -2,7 +2,7 @@
  * @Author: ryuusennka
  * @Date: 2021-03-22 16:10:30
  * @LastEditors: ryuusennka
- * @LastEditTime: 2021-03-23 04:20:47
+ * @LastEditTime: 2021-03-28 01:44:50
  * @FilePath: /chatroom-without-db/server/src/views/home.ejs
  * @Description:
 -->
@@ -14,7 +14,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
+      href="https://cdn.bootcdn.net/ajax/libs/font-awesome/5.12.1/css/all.min.css"
       integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk="
       crossorigin="anonymous"
     />
@@ -56,7 +56,7 @@
       </div>
     </div>
     <script src="https://cdn.bootcdn.net/ajax/libs/vue/2.6.12/vue.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.3/socket.io.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/socket.io/3.1.3/socket.io.min.js"></script>
     <script>
       new Vue({
         el: '#app',
