修改自适应时候的显示,添加 moment 显示时间

--- a/server/src/public/style.scss
+++ b/server/src/public/style.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+// @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
 :root {
   --dark-color-a: #667aff;
@@ -183,7 +183,7 @@ a {
     display: block;
   }
 
-  .chat-sidebar {
-    display: none;
-  }
+  // .chat-sidebar {
+  //   display: none;
+  // }
 }
