--- a/server/src/views/chat.ejs
+++ b/server/src/views/chat.ejs
@@ -55,7 +55,8 @@
     <script src="/vue.min.js"></script>
     <script src="/socket.io.min.js"></script>
     <!-- <script src="https://cdn.bootcdn.net/ajax/libs/qs/6.9.6/qs.min.js"></script> -->
-    <script src="https://cdn.bootcdn.net/ajax/libs/limonte-sweetalert2/10.15.6/sweetalert2.all.min.js"></script>
+    <!-- <script src="https://cdn.bootcdn.net/ajax/libs/limonte-sweetalert2/10.15.6/sweetalert2.all.min.js"></script> -->
+    <script src="/sweetalert2/sweetalert2.all.min.js"></script>
     <script>
       const socket = io();
       // const { username, chatroom } = Qs.parse(location.search, {
